fix(learn): progress bar label alignment (#49659)

--- a/client/src/components/FourOhFour/404.css
+++ b/client/src/components/FourOhFour/404.css
@@ -33,7 +33,6 @@
   font-size: 50px;
   font-weight: 700;
   color: var(--tertiary-color);
-  font-family: 'Arial', sans-serif;
   font-style: normal;
   padding-inline-start: 15px;
   padding-top: 5px;
